--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>💥learning</title>
+    <link rel="stylesheet" href="/index.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Hello world</h1>
+    <hr size="10px" />
+  </body>
 </html>
